src/k8s/base/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: myq5-deployment
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: myq5-web-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      imagePullSecrets:
        - name: myq5-secret
      containers:
        - name: myq5-web-app
          image: "gcr.io/four-track-friday-2/myq5_web_app"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 60
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 60
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 1m
              memory: 64Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
