src/k8s/base/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: myq5-service
spec:
  type: NodePort
  ports:
    - name: web-node
      port: 8080
      targetPort: 8080
