src/k8s/base/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myq5-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: myq5-ip
    networking.gke.io/managed-certificates: myq5-cert
spec:
  tls:
    - hosts:
        - myquarantine5.com
      secretName: myq5-cert
  rules:
    - host: myquarantine5.com
      http:
        paths:
          - path: /
            backend:
              serviceName: myq5-service
              servicePort: 8080
